--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -41,7 +41,7 @@
                                     {{ _('Honza is a Python engineer at Elastic, the company behind Elasticsearch and other open source products, where he maintains the python libraries. Before that he was part of Whiskey Media, using Django to build content website for large audiences. He always had large affinity of working with data and trying to help teams scale their code and data.') }}
                                 </p>
                             </div>
-                            <a name="speaker_kral"></a>
+                            <a name="session_kral"></a>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('So you want to be an Engineer?') }}</h4>
                                 <p>{{ _('Software Engineering is a new field, have we figured out all the ins and outs of how best to work in it?') }}</p>
@@ -193,7 +193,7 @@
                 </div><!-- Speaker list 4 end -->
             </div><!-- Speaker row 4 -->
 
-            <a name="session_balas"></a>
+            <a name="speaker_balas"></a>
             <div class="row">
                 <div class="ts-speaker-list clearfix">
                     <div class="col-xs-12 col-md-4">
@@ -217,7 +217,7 @@
                                     {{ _('After several years of using Python in e-commerce, banking, and media sectors in the UK, Jakub currently leads a technical side of ground segment at Iceye, the Earth observation start up in Finland. They are building a large synthetic-aperture radar (SAR) satellite constellation and using Python extensively in various parts of the project. Iceye has recently successfully launched their second satellite ICEYE-X2 on board of SpaceX’s Falcon 9.') }}
                                 </p>
                             </div>
-                            <a name="speaker_balas"></a>
+                            <a name="session_balas"></a>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('Using Python in new space industry is not a rocket science') }}</h4>
                                 <p>
@@ -229,7 +229,7 @@
                 </div><!-- Speaker list 5 end -->
             </div><!-- Speaker row 5 -->
 
-            <a name="session_wirtel"></a>
+            <a name="speaker_wirtel"></a>
             <div class="row">
                 <div class="ts-speaker-list clearfix">
                     <div class="col-xs-12 col-md-4">
@@ -257,7 +257,7 @@
                                          'AFPy, he is also a freelancer in the wonderful Python world.') }}
                                 </p>
                             </div>
-                            <a name="speaker_wirtel"></a>
+                            <a name="session_wirtel"></a>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('What\'s new in Python 3.7?') }}</h4>
                                 <p> {{ _('Scheduled for release in mid-June before the conference, '
@@ -644,7 +644,7 @@
                                          'series, and built a community of 5000+ people.') }}
                                 </p>
                             </div>
-                            <a name="speaker_pandey"></a>
+                            <a name="session_pandey"></a>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('Gotchas and landmines in Python') }}</h4>
                                 <p> {{ _('Python may be one of the simplest and most flexible programming languages '
@@ -751,7 +751,7 @@
                                          'and packed with functionality.') }}
                                 </p>
                             </div>
-                            <a name="speaker_sedinar"></a>
+                            <a name="session_sedinar"></a>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('Odoo') }}</h4>
                                 <p> {{ _('Odoo na Slovensku - game changer slovenského ERP prostredia. Chceme vám '
@@ -1574,7 +1574,7 @@
                                          'better. I am always keen to share my knowledge and learn from others.') }}
                                 </p>
                             </div>
-                            <a name="speaker_stehlik"></a>
+                            <a name="session_stehlik"></a>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('The dos and don\'ts of task queues') }}</h4>
                                 <p> {{ _('Let\'s talk about our experience with Celery and intentions to switch to RQ '
@@ -1769,7 +1769,7 @@
                                          'She is continuously improving her programming talent in DofE program.') }}
                                 </p>
                             </div>
-                            <a name="speaker_kupcova"></a>
+                            <a name="session_kupcova"></a>
                             <h3 class="ts-speaker-name dark">Eva Kupčová</h3>
                             <p class="ts-speaker-designation">{{ _('High school student') }}</p>
                             <ul class="ts-speaker-social-links">
