--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -64,7 +64,7 @@
 
         <div class="col-xs-12">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/exponea.jpg') }}" alt="Kiwi logo"/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/exponea.jpg') }}" alt="Exponea logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">Exponea</h4>
               <p>
