Updated venue and added a map

--- a/templates/venue.html
+++ b/templates/venue.html
@@ -47,11 +47,16 @@
           <h2>{{ _('Venue Address') }}</h2>
           <p class="text-justify">
             <address>
-	    {{ _('Slovak University of Technology in Bratislava') }}<br/>
+	        {{ _('Slovak University of Technology in Bratislava') }}<br/>
             {{ _('Faculty of Informatics and Information Technologies') }}<br/>
             Ilkovičova 2<br/>
             84216 Bratislava 4
 	    </address>
+          </p>
+
+        <h2>{{ _('Map and POIs') }}</h2>
+          <p class="text-justify">
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1gb1yg6x7zsBMb5N0qzLOcznx9bg" width="1140" height="640"></iframe>
           </p>
 
           <h2>{{ _('Travelling to Bratislava') }}</h2>
@@ -108,8 +113,8 @@
               <p class="text-justify">
                 {{ _('Most of the buses will bring you to the main bus station - Mlynske Nivy. It is currently located in temporary location, so don\'t
             worry and keep calm if you arrive feeling like on construction site. Leave the area towards the blue oval building VUB
-            (next to the building with BMW logo) where you find the station of city bus lines. We recommend you to take bus number
-            70 to the end station Most SNP (SNP bridge) and from there continue with line number 30 or 37 to the station ZOO.') }}
+            (next to the building with BMW logo) where you find the station of city bus lines.') }} {{ _('Public transport is currently very limited due to the constructions.') }}
+                {{ _('Even it is not shortest, we do recommend trolley bus to the main train station (and follow the instructions for train).') }}
               </p>
             </div>
             <div class="col-md-6">
