Minor schedule updates, added news and regenerated static site

--- a/templates/job-fair.html
+++ b/templates/job-fair.html
@@ -5,7 +5,7 @@
     <!-- Subpage title start -->
     <div class="page-banner-title">
       <div class="text-center">
-        <h1>{{ _('Job fair') }}</h1>
+        <h1>{{ _('Job Fair') }}</h1>
       </div>
     </div><!-- Subpage title end -->
   </div><!-- Page Banner end -->
@@ -16,32 +16,16 @@
       <div class="row featurette">
         <div class="col-md-12">
 
-          <p class="lead">
-              {{ _('An opportunity for employers to look for candidates in tech conference packed with geeks and programmers in general and also for more or less experienced job seekers to meet with multiple tech companies in one place.') }}
+          <p class="text-justify">
+            {{ _('We believe that an exceptional conference is more than great speakers, interesting talks and good food. Every year we try to introduce new things to PyCon SK. This year we will introduce another brand new feature - Job Fair. Together with our sponsors, we\'ve prepared an opportunity for you to meet their representatives.') }}
+          </p>
+          <p class="text-justify">
+            {{ _('Maybe you don\'t always have time to check those companies in person or you are too shy to meet representatives in their environment. During PyCon SK you will be surrounded by great people and a friendly atmosphere which will make talking to companies a much more pleasant experience.') }}
+          </p>
+          <p class="text-justify">
+            {{ _('When you talk to company representatives they can answer all your questions. After a short discussion, you will know what they expect from developers, about their currently open positions, what technology stack they are using and their growth opportunities. If this sounds interesting, please sign up in the form. We\'ll forward your details to company representatives you choose (you can select multiple) and they will schedule a spot during the Job Fair session with you (be aware that the number of the slots is limited).') }}
           </p>
 
-          <h2>{{ _('Employers') }}</h2>
-          <p class="text-justify">
-            {{ _('PyCon SK will be the capital of Python for three days; it will become a place with the highest density of Python programmers per square meter. ') }}
-            {{ _('Besides Slovak professionals, there will be programmers from Hungary or Austria as there is no local PyCon there, but also from Czechia, Poland, Germany etc. ') }}
-            {{ _('You can seek for fresh graduates, but also for seasoned programmers who are looking for a change in their careers. ') }}
-            {{ _('Present your company and show what it is like to work with you. ') }}
-          </p>
-
-          <h2>{{ _('Students') }}</h2>
-          <p class="text-justify">
-            {{ _('Looking for your first real job as a programmer? PyCon SK is a great place with many companies eager to hire a Pythonista. ') }}
-            {{ _('Visit our Job fair or drop in the sponsors'' booths and talk with your potential future employer. ') }}
-            {{ _('Get an idea of how the interview with recruiter looks like. ') }}
-            {{ _('Find the company that suits you and can use your skills best. ') }}
-          </p>
-
-          <h2>{{ _('Professionals') }}</h2>
-          <p class="text-justify">
-            {{ _('If you feel an urge to change your career after years of routine work, PyCon SK is the best place for you. ') }}
-            {{ _('Visit our job fair and talk with companies that will appreciate your experience.  ') }}
-            {{ _('Even if you do not look for a new job, you might get an overview of what options you have. ') }}
-          </p>
 
         </div>
       </div>
