--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -92,7 +92,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
 
 
-      <div class="row text-center">
+      <div class="row text-center is-flex">
         <h3 class="sponsor-title">{{ _('Gold Sponsors') }}</h3>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
@@ -164,7 +164,48 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
         </div><!-- Col 1 end -->
+
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/rbi.png') }}" alt="Raiffeisen Group AI Lab logo"/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Raiffeisen Group AI Lab</h4>
+              <p>
+                {{ _('Permanent Establishment of Raiffeisen Bank International AG in Slovakia') }}
+              </p>
+              <p>
+{{ _('Our team develops solution based on state of the art artificial intelligence models and algorithms for natural language processing for the Raiffeisen banks in the CEE region. Our focus areas are conversational AI and voice processing. Raiffeisen Group AI Lab represents a unique concentration of knowhow and expertise in the field of AI delivering innovative language-based solutions.') }}
+              </p>
+{#              <div class="sponsor-web-link">#}
+{#                <a href="#" target="_blank"><i class="fa fa-globe"></i></a>#}
+{#                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>#}
+{#                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>#}
+{#                <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>#}
+{#              </div>#}
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
       </div><!--/ Content row 2 end -->
+
+      <div class="row text-center">
+        <h3 class="sponsor-title">{{ _('Silver Sponsors') }}</h3>
+
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/segron.png') }}" alt=""/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Segron</h4>
+              <p></p>
+              <div class="sponsor-web-link">
+                <a href="http://www.segron.com/" target="_blank"><i class="fa fa-globe"></i></a>
+{#                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>#}
+{#                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>#}
+{#                <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>#}
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
+      </div>
 
       <div class="row text-center">
         <h3 class="sponsor-title">{{ _('Bronze Sponsors') }}</h3>
