--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -170,12 +170,13 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
             <img class="img-responsive" src="{{ url_for('static', filename='images/partners/rbi.png') }}" alt="Raiffeisen Group AI Lab logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">Raiffeisen Group AI Lab</h4>
-              <p>
-                {{ _('Permanent Establishment of Raiffeisen Bank International AG in Slovakia') }}
-              </p>
-              <p>
-{{ _('Our team develops solution based on state of the art artificial intelligence models and algorithms for natural language processing for the Raiffeisen banks in the CEE region. Our focus areas are conversational AI and voice processing. Raiffeisen Group AI Lab represents a unique concentration of knowhow and expertise in the field of AI delivering innovative language-based solutions.') }}
-              </p>
+              <p> {{ _('Permanent Establishment of Raiffeisen Bank International AG in Slovakia') }}</p>
+              <p> {{ _('Our team develops solution based on state of the art artificial '
+                       'intelligence models and algorithms for natural language processing for '
+                       'the Raiffeisen banks in the CEE region. Our focus areas are conversational '
+                       'AI and voice processing. Raiffeisen Group AI Lab represents a unique '
+                       'concentration of knowhow and expertise in the field of AI delivering '
+                       'innovative language-based solutions.') }} </p>
 {#              <div class="sponsor-web-link">#}
 {#                <a href="#" target="_blank"><i class="fa fa-globe"></i></a>#}
 {#                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>#}
@@ -192,16 +193,23 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
         <div class="col-xs-12 col-sm-6 col-md-6">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/segron.png') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/segron.png') }}" alt="Segron logo"/>
             <div class="sponsor-info">
-              <h4 class="sponsor-name">Segron</h4>
-              <p></p>
-              <div class="sponsor-web-link">
-                <a href="http://www.segron.com/" target="_blank"><i class="fa fa-globe"></i></a>
+              <h4 class="sponsor-name">SEGRON Automation</h4>
+              <p>{{ _('SEGRON stands for Beyond End2End® Test Automation in Telecoms & IT, '
+                      'international consulting and tailor-made software solutions.') }}</p>
+              <p>{{ _('Founded by industry experts with over 20 years experience in IT and '
+                      'telecommunications, our multinational team consists of experienced Telco '
+                      'and IT engineers, software developers, testing/automation specialists and '
+                      'project managers.') }}</p>
+              <p>{{ _('Our customers are international telecom operators, where our solutions '
+                      'enable faster and quality assured new service introduction and innovation.') }}</p>
+{#              <div class="sponsor-web-link">#}
+{#                <a href="#" target="_blank"><i class="fa fa-globe"></i></a>#}
 {#                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>#}
 {#                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>#}
 {#                <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>#}
-              </div>
+{#              </div>#}
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
         </div><!-- Col 1 end -->
