--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -901,6 +901,7 @@
                                         <li>{{ _('Deployment to Heroku 🚀.') }}</li>
                                         <li>{{ _('Debugging: inspection of webhook events via UI.') }}</li>
                                         <li>{{ _('Concluding ideas.') }}</li>
+                                        <li>{{ _('Bonus: <a href="https://github.com/features/actions/signup" target="_blank">sign up for GitHub Actions</a> as early as possible to try it out on the workshop.') }}</li>
                                     </ol>
                                 </p>
 
