--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -891,8 +891,9 @@
                                          'deployment process: from creating an App entity in the GitHub UI, to '
                                          'actual coding and to shipping your code via Heroku.') }}
                                 <p> {{ _('To participate in the hands-on, bring your laptop with Python 3.7 and '
-                                         'some editor on-board. You\'ll also need to have a GitHub account.') }}
-                                <p> {{ _('Agenda:') }} </p>
+                                         'some editor on-board. You\'ll also need to have a GitHub account.') }}</p>
+                                <p>{{ _('Bonus: <a href="https://github.com/features/actions/signup" target="_blank">sign up for GitHub Actions</a> as early as possible to try it out on the workshop.') }}</p>
+                                <p>{{ _('Agenda:') }} </p>
                                 <p>
                                     <ol>
                                         <li>{{ _('Express intro into what bots are. How they are related to our coding activities. Creative use of robots.') }}</li>
@@ -901,7 +902,6 @@
                                         <li>{{ _('Deployment to Heroku 🚀.') }}</li>
                                         <li>{{ _('Debugging: inspection of webhook events via UI.') }}</li>
                                         <li>{{ _('Concluding ideas.') }}</li>
-                                        <li>{{ _('Bonus: <a href="https://github.com/features/actions/signup" target="_blank">sign up for GitHub Actions</a> as early as possible to try it out on the workshop.') }}</li>
                                     </ol>
                                 </p>
 
