added Mini Tech MBA as a partner

--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -220,7 +220,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
         <div class="col-xs-12 col-sm-4 col-md-4">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/stickermule.svg') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/stickermule.svg') }}" alt="Sticker Mule logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">Sticker Mule</h4>
               <p>{{ _('Sticker Mule is the fastest and easiest way to buy custom printed products. Thousands of people trust us to make kick-ass stickers, labels, magnets, badges &amp; more. Order in seconds and get free online proofs, free shipping, and super fast turnaround!') }}</p>
@@ -236,7 +236,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
         <div class="col-xs-12 col-sm-4 col-md-4">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/jetbrains.svg') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/jetbrains.svg') }}" alt="JetBrains logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">Jet Brains</h4>
               <p>{{ _('At JetBrains, code is our passion. For over 15 years we have strived to make the strongest, most effective developer tools on earth. By automating routine checks and corrections, our tools speed up production, freeing developers to grow, discover and create.') }}</p>
@@ -252,7 +252,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
         <div class="col-xs-12 col-sm-4 col-md-4">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/martinus.jpg') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/martinus.jpg') }}" alt="Martinus logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">martinus.sk</h4>
               <p>{{ _('Martinus.sk is the largest online bookstore and the second largest bookseller in Slovakia. It was '
@@ -275,7 +275,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
         <div class="col-xs-12 col-sm-3 col-md-3">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/robime-it.svg') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/robime-it.svg') }}" alt="robime.it logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">robime.it</h4>
               <p>&nbsp;</p>
@@ -290,7 +290,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
         <div class="col-xs-12 col-sm-3 col-md-3">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/techevents.png') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/techevents.png') }}" alt="techevents.online logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">techevents.online</h4>
               <p>&nbsp;</p>
@@ -309,7 +309,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
         <div class="col-xs-12 col-sm-3 col-md-3">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/fiit-stu.svg') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/fiit-stu.svg') }}" alt="FIIT STU logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">STU FIIT</h4>
               <p>&nbsp;</p>
@@ -323,7 +323,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
         <div class="col-xs-12 col-sm-3 col-md-3">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/progressbar.svg') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/progressbar.svg') }}" alt="Progressbar logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">Progressbar</h4>
               <p>&nbsp;</p>
@@ -339,7 +339,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
         <div class="col-xs-12 col-sm-3 col-md-3">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/slido.svg') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/slido.svg') }}" alt="Sli.do logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">sli.do</h4>
               <p>&nbsp;</p>
@@ -357,7 +357,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
 
         <div class="col-xs-12 col-sm-3 col-md-3">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/itclub.png') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/itclub.png') }}" alt="IT club logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">Nexteria IT Club</h4>
               <p>&nbsp;</p>
@@ -370,10 +370,11 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
         </div><!-- Col 4 end -->
+
         <!--NEXT ROW -->
         <div class="col-xs-12 col-sm-3 col-md-3">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/megabooks.png') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/megabooks.png') }}" alt="Megabooks logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">Megabooks SK</h4>
               <p>&nbsp;</p>
@@ -389,7 +390,7 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
         </div><!-- Col 1 end -->
         <div class="col-xs-12 col-sm-3 col-md-3">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/coderdojo.svg') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/coderdojo.svg') }}" alt="Coder Dojo logo"/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">Coder Dojo</h4>
               <p>&nbsp;</p>
@@ -403,6 +404,22 @@ for a rapid, profitable growth of emerging e-commerce leaders around the') }}
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
         </div><!-- Col 2 end -->
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/minitech-mba.png') }}" alt="Minitech MBA logo"/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Mini Tech MBA</h4>
+              <p>&nbsp;</p>
+              <div class="sponsor-web-link">
+                <a href="https://minitechmba.org/" target="_blank"><i class="fa fa-globe"></i></a>
+{#                <a href="https://www.facebook.com/CoderDojoBratislava" target="_blank"><i class="fa fa-facebook"></i></a>#}
+{#                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>#}
+{#                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>#}
+{#                <a href="https://instagram.com/oxfordbookshop/" target="_blank"><i class="fa fa-instagram"></i></a>#}
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 3 end -->
       </div>
 
     </div>
