Added link to chat

--- a/templates/index.html
+++ b/templates/index.html
@@ -214,6 +214,23 @@
             <div class="row">
                 <div class="col-md-12 text-left">
                     <div class="card">
+                        <h5 class="card-header">15.03.2019 - {{ _('PyCon SK 2019 Conference chat.') }}
+                        </h5>
+                        <div class="card-body">
+                            <p>
+                                {{ _('There will be official conference chat on Slack.') }}
+                                <p class="text-center">
+                                <a href="https://join.slack.com/t/pyconsk/shared_invite/enQtNTY4NTIxMDgxMzk0LWJiODQ5NzIxMWJhZGE0Yjc3Y2ZlMjU2MTFmOTg1NzEwZjFmYzg3ZTZmYTQ2MDU2NDIzNjk5ZTA2MTFjYjVmZDE" target="_blank" class="btn btn-lg btn-secondary">{{ _('PyCon SK 2019 Slack') }}</a>
+                                </p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 text-left">
+                    <div class="card">
                         <h5 class="card-header">12.03.2019 - {{ _('PyCon SK 2019 Job Fair.') }}
                         </h5>
                         <div class="card-body">
